--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Mars Rover Photos</title>
 		<link rel="stylesheet" href="./css/main.min.css">
+		
+		<!-- Favicons -->
+		<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+		<link rel="manifest" href="./manifest.json">
+		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#0e68b1">
+		<meta name="theme-color" content="#0e68b1">
 	</head>
 	<body>
 		<header class="row center">
