--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		<script src="https://unpkg.com/flatpickr"></script>
 		
 		<!-- Custom JS -->
-		<script src="./js/main.js"></script>
+		<script type="text/javascript" src="./config.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
 	</body>
 </html>
