add error handling for no photos returned and api calls

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			
 			<!-- Blank State -->
 			<div id="blankState" class="center">
+				<p id="errorMsg">No Photos Found for <span>Spirit</span> on <span>2017-12-7</span></p>
 				<h2>Find a rover photo...</h2>
 				<p>Try searching for <span>Curiosity</span> on <span>2017-12-7</span></p>
 			</div>
