configure datepicker min/max dates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				
 				<!-- Earth Date Select -->
 				<div class="col-4">
-					<label for="earthDate">Earth Date:</label>
+					<label for="earthDate">Earth Date: <span>&ast;</span></label>
 					<input type="text" id="earthDate">
 				</div>
 				
