--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Mars Rover Photos</title>
+		<!-- CSS -->
 		<link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
 		<link rel="stylesheet" href="./css/main.min.css">
+		
+		<!-- Manifest -->
 		<link rel="manifest" href="./manifest.json">
 		<meta name="theme-color" content="#0e68b1">
 		
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#0e68b1">
+		<link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+		<link rel="mask-icon" href="./assets/icons/safari-pinned-tab.svg" color="#0e68b1">
 	</head>
 	<body>
 		<header class="row center">
