--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 		
 		<!-- Custom JS -->
 		<script type="text/javascript" src="./config.js"></script>
-		<script type="text/javascript" src="./js/main.js"></script>
+		<script type="text/javascript" src="./dist/main.min.js"></script>
 	</body>
 </html>
