--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Mars Rover Photos</title>
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
-		<link rel="stylesheet" href="./css/main.min.css">
+		<link rel="stylesheet" href="./dist/main.min.css">
 		
 		<!-- Manifest -->
 		<link rel="manifest" href="./manifest.json">
@@ -86,9 +86,9 @@
 			</ul>
 			<p>Icons from the <a href="https://thenounproject.com/" target="_blank" rel="noopener">Noun Project</a></p>
 		</footer>
+
+		<!-- JavaScript -->
 		<script src="https://unpkg.com/flatpickr"></script>
-		
-		<!-- Custom JS -->
 		<script type="text/javascript" src="./config.js"></script>
 		<script type="text/javascript" src="./dist/main.min.js"></script>
 	</body>
