create rover animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	</head>
 	<body>
 		<header class="row center">
-			<img class="marsRoverSVG col-2 center" src="./assets/svg/marsRover.svg" alt="mars rover." />
+			<img id="marsRoverSVG" class="marsRoverSVG col-2 center" src="./assets/svg/marsRover.svg" alt="mars rover icon" />
+			<img id="marsRoverDupe" src="./assets/svg/marsRover.svg" alt="mars rover icon" />
 			<h1>Mars Rover Photos</h1>
 			<p>Search the <a href="https://api.nasa.gov/api.html#MarsPhotos" target="_blank" rel="noopener" title="NASA Mars Rover API">NASA Mars Rover API</a> for photos.
 		</header>
